--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header span {
     padding: 60px 0;
     max-height: 100vh;
     display: flex;
-    justify-content: center;
+    align-items: center;
     /* 📍 Свойства flexbox для размещения container-a вертикально по центру */
 }
 
@@ -75,7 +75,8 @@ header span {
 }
 
 .about-section .wrapper {
-    
+    display: flex;
+    gap: 60px;
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
@@ -118,6 +119,8 @@ select:hover,
 
 .frameworks-list,
 .books-list {
+    display: flex;
+    gap: 16px;
     /* 📍 Свойства flexbox для отступов между элементами в списках */
 }
 
@@ -126,9 +129,12 @@ select:hover,
     font-size: 16px;
     list-style-image: url(./solar_map-arrow-up-bold.svg);
     padding-left: 20px;
+    gap: 16px;
+    
 }
 
 .skills-block {
+   
     /* 📍 Свойства flexbox для расположения формы над элементами с классом .label */
 }
 
@@ -142,8 +148,8 @@ select:hover,
     font-weight: 400;
     font-size: 16px;
     padding-left: 20px;
-    gap: 165px;
-   flex-direction: row;
+    gap: 16px;
+   flex-direction: column;
    
 }
 
@@ -183,6 +189,9 @@ form {
 }
 
 .btn:hover {
+    cursor: pointer;
+    transition: 0.2s;
+    background-color:lightblue;
     /* 📍 Стили для кнопки при наведении курсора */
 }
 
@@ -205,7 +214,6 @@ th, td {
 footer {
     background-color: rgba(163, 167, 255, 0.3);
     padding: 26px 0;
-   
     text-align: center;
     /* 📍 Свойство для расположения ссылки горизонтально по центру */
 }
