--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ header span {
 }
 
 .about-section .wrapper {
-    display: flex;
-    gap: 60px;
+    /* display: flex;
+    gap: 60px; */
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
@@ -95,6 +95,8 @@ select {
 
 select:hover,
 .text-field:hover {
+    cursor: pointer;
+    
     /* 📍 Стили для выпадающего списка и текстового поля при наведении курсора */
 }
 
@@ -120,6 +122,7 @@ select:hover,
 .frameworks-list,
 .books-list {
     display: flex;
+    flex-direction: column;
     gap: 16px;
     /* 📍 Свойства flexbox для отступов между элементами в списках */
 }
@@ -140,6 +143,7 @@ select:hover,
 
 .skills {
      min-width: 50%; 
+
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
 }
 
@@ -155,8 +159,7 @@ select:hover,
 
 .label {
     display: flex;
-
-   gap: 20px;
+    gap: 20px;
     font-weight: 400;
     font-size: 16px;
 }
