--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ header span {
 }
 
 .about-section {
- 
+    max-width: 100%;
     background-color: #fff;
     padding: 100px 0;
     
@@ -77,7 +77,8 @@ header span {
 }
 
 .about-section .wrapper {
-
+gap:60px;
+justify-content: space-between;
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
 }
 
@@ -138,13 +139,14 @@ select:hover,
 }
 
 .skills-block {
-   
+    display: flex;
+   flex-direction: column-reverse;
     /* 📍 Свойства flexbox для расположения формы над элементами с классом .label */
 }
 
 .skills {
      min-width: 50%; 
-
+gap: 20px;
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
 }
 
